--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@cdr0/config": "^1.0.1",
+    "@cdr0/polyrepo": "^1.0.3",
+    "@cdr0/ports": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
+  },
+  "devDependencies": {
+    "ava": "^3.14.0"
   }
 }
