--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@cdr0/ports": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
     "nodemon": "^2.0.6",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
